Fix subscribe alignment

--- a/css/sass/_links.scss
+++ b/css/sass/_links.scss
@@ -10,11 +10,12 @@ a{
 .btn{
   @include border-radius($btn-br);
   background:$tertiary-color;
-  border:2px solid $tertiary-color;
+  border:1px solid $tertiary-color;
   color:#fff;
   text-decoration:none;
   display:inline-block;
   line-height: $line-height;
+  height: $line-height;
   padding:0 25px;
   text-transform: capitalize;
   font-size:22px;
